Bug 1682033: Improve visibility of pinned comments (#1815)
* Pinned comments and All comments sections in the Comments panel
* More distinguished pinned comment presentation
* Pinned comments on top of the Metadata panel
* Prevent long pinned comments to break into new line in Metadata section
  Example: https://pontoon.mozilla.org/lt/firefox/toolkit/toolkit/about/aboutSupport.ftl/?string=217776

--- a/frontend/src/core/comments/components/Comment.css
+++ b/frontend/src/core/comments/components/Comment.css
@@ -70,7 +70,12 @@
 
 .comments-list .comment .comment-pin {
     color: #7bc876;
+    font-size: 9px;
     position: absolute;
     right: 4px;
-    top: -6px;
+    top: -10px;
+}
+
+.comments-list .comment .comment-pin .fa {
+    padding-right: 2px;
 }
