--- a/frontend/src/modules/entitydetails/components/Metadata.css
+++ b/frontend/src/modules/entitydetails/components/Metadata.css
@@ -30,7 +30,7 @@
 }
 
 .metadata .comment .content p {
-    display: inline-block;
+    display: inline;
 }
 
 .metadata div .divider {
